<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/menuListFragment">

    <!--    android:label="@string/fragment_menu_list_title"-->
    <fragment
        android:id="@+id/menuListFragment"
        android:name="com.example.menu.fragments.MenuListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_menu_list">
        <action
            android:id="@+id/action_menuListFragment_to_itemDetailsFragment"
            app:destination="@id/itemDetailsFragment" />
        <action
            android:id="@+id/action_menuListFragment_to_addItemFragment"
            app:destination="@id/addItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailsFragment"
        android:name="com.example.menu.fragments.ConsumableDetailsFragment"
        android:label="@string/details_fragment_title"
        tools:layout="@layout/fragment_consumable_details">
        <action
            android:id="@+id/action_itemDetailsFragment_to_menuListFragment"
            app:destination="@id/menuListFragment"
            app:popUpTo="@id/menuListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addItemFragment"
        android:name="com.example.menu.fragments.AddConsumableFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_consumable">
        <action
            android:id="@+id/action_addItemFragment_to_searchImageFragment"
            app:destination="@id/searchImageFragment" />
        <argument
            android:name="consumable_description"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="consumable_imageUrl"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_addItemFragment_to_menuListFragment"
            app:destination="@id/menuListFragment"
            app:popUpTo="@id/menuListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="title"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="id"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/searchImageFragment"
        android:name="com.example.menu.fragments.SearchImageFragment"
        android:label="@string/search_fragment_title"
        tools:layout="@layout/fragment_search_image">
        <action
            android:id="@+id/action_searchImageFragment_to_addItemFragment"
            app:destination="@id/addItemFragment"
            app:popUpTo="@id/addItemFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="consumable_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="price"
            app:argType="string" />
    </fragment>
</navigation>